@@ -1852,12 +1852,13 @@ p6_forward( ofaExerciceCloseAssistant *self )
 	priv = ofa_exercice_close_assistant_get_instance_private( self );
 
 	signaler = ofa_igetter_get_signaler( priv->getter );
-
 	dbegin = ofo_dossier_get_exe_begin( priv->dossier );
+
+	/* preload the entries dataset to make the myICollector ready */
+	ofo_entry_get_dataset( priv->getter );
 
 	bar = get_new_bar( self, "p6-forward" );
 	gtk_widget_show_all( priv->p6_page );
-
 	count = g_list_length( priv->p6_forwards );
 	i = 0;
 
